--- a/chatRoom/static/css/transition.scss
+++ b/chatRoom/static/css/transition.scss
@@ -4,7 +4,7 @@
   left:0;
   top:0;
   //transition: all .3s cubic-bezier(.81,.35,.3,.71);
-  transition: all 1s cubic-bezier(.81,.35,.3,.71);
+  transition: all .5s cubic-bezier(.81,.35,.3,.71);
 }
 .moveIn-enter{
   transform: translateX(100%);
@@ -24,7 +24,7 @@
   left:0;
   top:0;
   //transition: all .3s cubic-bezier(.81,.35,.3,.71);
-  transition: all 1s cubic-bezier(.81,.35,.3,.71);
+  transition: all .5s cubic-bezier(.81,.35,.3,.71);
 }
 .moveOut-enter{
     transform: translateX(-100%);
