删除表情商城前

--- a/chatRoom/static/css/vChat-class.scss
+++ b/chatRoom/static/css/vChat-class.scss
@@ -36,7 +36,7 @@
     -webkit-line-clamp: 2;
     overflow: hidden;
     /* autoprefixer: off */
-    -webkit-box-orient: vertical; // 参考 https://github.com/postcss/autoprefixer/issues/776
+    -webkit-box-orient: vertical;
     /* autoprefixer: on */
 }
 
