--- a/chatRoom/static/css/transition.scss
+++ b/chatRoom/static/css/transition.scss
@@ -1,13 +1,16 @@
+//联系人列表动画
 // 进入
 .moveIn-enter-active, .moveIn-leave-active {
   position: absolute;
   left:0;
   top:0;
-  //transition: all .3s cubic-bezier(.81,.35,.3,.71);
-  transition: all .5s cubic-bezier(.81,.35,.3,.71);
+  transition: all .5s ease;
 }
 .moveIn-enter{
   transform: translateX(100%);
+}
+.moveIn-leave-to{
+  transform: translateX(-100%);
 }
 .moveIn-enter-to{
     transform: translateX(0);
@@ -15,16 +18,12 @@
 .moveIn-leave{
     transform: translateX(0);
 }
-.moveIn-leave-to{
-    transform: translateX(-100%);
-}
 // 离开
 .moveOut-enter-active, .moveOut-leave-active {
   position: absolute;
   left:0;
   top:0;
-  //transition: all .3s cubic-bezier(.81,.35,.3,.71);
-  transition: all .5s cubic-bezier(.81,.35,.3,.71);
+  transition: all .5s ease;
 }
 .moveOut-enter{
     transform: translateX(-100%);
@@ -38,18 +37,15 @@
 .moveOut-leave-to{
     transform: translateX(100%);
 }
+
 // chat展示动画
-//.chat-enter-active{
-//     transition: all .5s cubic-bezier(.71,.21,.28,.82);
-//}
 .chat-leave-active {
-    transition: all .5s cubic-bezier(.51,1.91,.49,-0.97);
+    transition: all .5s ease;
 }
 .chat-enter{
     transform: translate(0, -100%) scale(0.5);
 }
 .chat-enter-to {
-    //animation: chat-enter 1.5s cubic-bezier(.71,.21,.28,.82);
   animation: chat-enter 2s ease;
 }
 .chat-leave{
